lots of various cleanups for things found by Sonar